--- a/Sources/Nested/overview.tex
+++ b/Sources/Nested/overview.tex
@@ -121,7 +121,7 @@ is unsound. For the same reason \lstinline{Lang} is not a subtype of \lstinline{
 
 A summary of the various relationships between the language components is shown
 in \cref{fig:diagram}. Admittedly, the figure looks quite complex because our
-calculus features a structural type system (as often more foundational calculi
+calculus has a structural type system (as often more foundational calculi
 do) where more types are related through subtyping, whereas mainstream OO
 languages have nominal type systems.
 
