--- a/Thesis.tex
+++ b/Thesis.tex
@@ -63,7 +63,7 @@
 %   ]{biblatex}
 
 
-\usepackage{natbib}
+\usepackage[sort]{natbib}
 \setcitestyle{%
     authoryear,%
     open={[},close={]},citesep={;},%
