--- a/Sources/Poly/overview.tex
+++ b/Sources/Poly/overview.tex
@@ -1,9 +1,9 @@
 
 \section{Overview}
 
-In this section we first give an overview of
+In this section we give an overview of
 disjoint polymorphism~\citep{alpuimdisjoint}, a variant of parametric polymorphism. The main novelty
-is the so-called disjoint (universal) quantification of the form
+is \textit{disjoint (universal) quantification} of the form
 $[[ \ X ** A . B ]]$. Inspired by bounded quantification~\citep{cardelli1994extension} where a
 type variable is constrained by a type bound, disjoint quantification allows
 type variables to be associated with \textit{disjointness constraints}. Correspondingly, a
@@ -22,13 +22,14 @@ However, if we were to allow such definition, we could easily create an example 
 This is essentially the same problem of allowing $\mer{1}{2}$, which as we
 discussed in \cref{bg:sec:intersection} will cause ambiguity. For \namee, we
 know the concrete type for each variable and thus disjointness checking can help
-avoid this problematic expression. However, with parametric polymorphism, a variable
-could have a generic type, meaning that it can be of any type. So the question here
-is to decide under what conditions a type variable is disjoint with, say,
-\lstinline{Int}. This is where disjointness constraints come onto stage. The key idea
-is that since we do not know \textit{a priori} what is the exact instantiation a
-type variable is going to have, what we can do is to restrict the set of types
-it can be instantiated to. Let us rewrite the above program as follows:
+avoid this problematic expression. However, with parametric polymorphism, a
+variable could have any types,
+including those that are already in the intersection. So a question to ask is to
+decide under what conditions a type variable is disjoint with, say,
+\lstinline{Int}. This is where disjointness constraints come onto stage. The key
+idea is that since we do not know \textit{a priori} what is the type with which
+a type variable can be instantiated, we can restrict the set of types it can be
+instantiated to. Let us rewrite the above program as follows:
 \begin{lstlisting}
 mergeGood [X * Int] (x : X) : X & Int = x ,, 2;
 \end{lstlisting}
@@ -36,11 +37,9 @@ The only change is the notation \lstinline{[X * Int]}, where the left-side of
 \lstinline{*} denotes the type variable being declared, and the right-side
 denotes the disjointness constraint(s). Here the disjointness constraint
 (\lstinline{Int}) effectively states that the type variable \lstinline{X} can be
-instantiated to any types disjoint with \lstinline{Int}. For example,
-\begin{lstlisting}
-(mergeGood Bool True) : Int
-\end{lstlisting}
-is accepted but \lstinline{mergeGood Int 1} is rejected due to the fact that \lstinline{Int} (the instantiation) is not disjoint with
+instantiated to any types disjoint with \lstinline{Int}. For instance, the expression \lstinline{mergeGood Bool True}
+type checks but the expression \lstinline{mergeGood Int 1}
+is rejected because \lstinline{Int} (the type argument) is not disjoint with
 \lstinline{Int} (the disjointness constraint). What is more, we can express multiple
 constraints using intersection types, for example,
 \begin{lstlisting}
